<resources>
    <string name="app_name">Dial</string>
    <string name="service_name">Dial is active</string>
    <string name="addressbook_label" translatable="false">Dial</string>
    <string name="notification_title">Dial</string>
    <string name="wait_dialog_text">Starting up</string>
    <string name="notification_registered">%s connected</string>
    <string name="notification_register_failure">%s failed to register</string>
    <string name="tunnel_host"></string>
    <string name="about_version">Dial %s</string>
    <string name="about_liblinphone_version">Dial Core %s</string>
    <string name="about_liblinphone_sdk_version" translatable="false">Dial SDK %s</string>
    <string name="about_privacy_policy" translatable="false">Visit our privacy policy</string>
    <string name="about_privacy">Privacy Policy</string>
    <string name="about_acknowledgement">Acknowledgement</string>
    <string name="about_external_number">ID:</string>
     <string name="about_extension">Extension:</string>
    <string name="sync_account_name">Dial contacts</string>
    <string name="notification_reply_label">Reply</string>
    <string name="notification_replied_label">Sent reply: %s</string>
    <string name="notification_call_hangup_label">Ignore</string>
    <string name="notification_call_answer_label">Answer</string>
    <string name="notification_mark_as_read_label">Mark as read</string>
    <string name="username">Username</string>
    <string name="userid">User-id (optional)</string>
    <string name="phone_number">Phone number</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="international_prefix">International phone number prefix</string>
    <string name="display_name"> </string>
    <string name="password">Password</string>
    <string name="confirm_password">Password confirmation</string>
    <string name="domain">Domain</string>
    <string name="remote_provisioning_url">URL</string>
    <string name="external_number">External Number</string>
    <string name="external_number_label">External Number (Optional)</string>
    <string name="primary_account">Primary Account</string>
    <string name="email">Email</string>
    <string name="delete_text">Are you sure you want to delete your selection?</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="open">Open</string>
    <string name="continue_text">Continue</string>
    <string name="about">About</string>
    <string name="deny">Deny</string>
    <string name="no_account">No account configured</string>
    <string name="search">Search</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="missed">Missed</string>
    <string name="settings">Settings</string>
    <string name="connection">Connection</string>
    <string name="decline">Decline</string>
    <string name="conference">Conference</string>
    <string name="link">Link</string>
    <string name="link_account_popup">Do you want to link the account %s with your phone number?</string>
    <string name="maybe_later">Maybe later</string>
    <string name="later">Later</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="link_account">Link your account</string>
    <string name="update_available">An update is available</string>
    <string name="do_not_ask_again">Do not show again</string>
    <string name="delete_contacts_text">Are you sure you want to delete these contacts?\nThey will be deleted from your phone as well!</string>
    <string name="logs_url_copied_to_clipboard">Logs url copied into clipboard</string>
    <string name="app_description" translatable="false"></string>
    <string name="acknowledgement_title" translatable="false">Special Acknowledgement to Linphone</string>
    <string name="acknowledgement_address" translatable="false">http://linphone.org</string>
    <string name="acknowledgement_gnu" translatable="false"> GNU General Public License \u00a9 V3 2010-2019 Belledonne Communications</string>
    <string name="linphone_address" translatable="false">glaciersecurity.com</string>
    <string name="welcome">Glacier Dial</string>
    <string name="assistant">Glacier Dial</string>
    <string name="assistant_create_account">Create account</string>
    <string name="assistant_link_account">Link account</string>
    <string name="assistant_continue">Continue</string>
    <string name="assistant_activate">Activate your account</string>
    <string name="assistant_finish">Finish configuration</string>
    <string name="assistant_validate_account_1">Your account is created. Please check your mails to validate your account:</string>
    <string name="assistant_validate_account_2">Once it is done, come back here and click on the button.</string>
    <string name="assistant_welcome_desc">This assistant will help you configure and use your SIP account.</string>
    <string name="assistant_linphone_login_desc">Please enter the username and password for your Dial account</string>
    <string name="assistant_login_desc">Please enter your username and password with your SIP domain</string>
    <string name="assistant_remote_provisioning_desc">Please provide your provisioning URL</string>
    <string name="transport">Transport</string>
    <string name="assistant_create_account_phone_number_address">Your Glacier extension is</string>
    <string name="assistant_login_linphone">Use Dial account</string>
    <string name="assistant_login_generic">Use SIP account</string>
    <string name="assistant_remote_provisioning">Fetch remote configuration</string>
    <string name="assistant_create_account_part_1">Please confirm your country code and enter your phone number</string>
    <string name="assistant_create_account_part_2">We have sent you a SMS with a validation code to your phone number:</string>
    <string name="assistant_create_account_part_3">To complete your phone number verification, please enter the 4 digit code below:\n</string>
    <string name="assistant_create_account_part_email">Please enter a username, email and password for your Dial account</string>
    <string name="assistant_display_name_optional">Display name (optional)</string>
    <string name="assistant_display_external_number">External Number</string>
    <string name="assistant_linphone_account">Use your Dial account</string>
    <string name="assistant_generic_account">Use SIP account</string>
    <string name="assistant_remote_provisioning_title">Fetch remote configuration</string>
    <string name="assistant_fetch_apply">Fetch and apply</string>
    <string name="assistant_launch_qrcode">QRCode</string>
    <string name="assistant_login">Login</string>
    <string name="assistant_ec_calibration">Echo canceler calibration in progress</string>
    <string name="assistant_remote_provisioning_login">Enter your login</string>
    <string name="assistant_account_not_validated">Your account has not been validated yet.</string>
    <string name="assistant_error_confirmation_code">The confirmation code is invalid.\r\nPlease try again.</string>
    <string name="assistant_account_validated">Your account has been validated.</string>
    <string name="assistant_error_bad_credentials">Incorrect username or password</string>
    <string name="assistant_codec_down_question">Do you agree to download OpenH264 Video Codec provided by Cisco Systems, Inc.?</string>
    <string name="assistant_codec_downloading">Downloading OpenH264 Video Codec provided by Cisco Systems, Inc.</string>
    <string name="assistant_openh264_downloading">Downloading OpenH264</string>
    <string name="assistant_openh264_restart">Before you can use OpenH264 codec you must restart %s.</string>
    <string name="assistant_openh264_error">Sorry an error has occurred.</string>
    <string name="assistant_codec_downloaded">OpenH264 Video Codec provided by Cisco Systems, Inc. downloaded.</string>
    <string name="assistant_need_primary_account">Need to register primary account before going to dialpad!</string>
    <string name="wizard_failed">An error occurred, try again later.</string>
    <string name="wizard_server_unavailable">Server unreachable, verify your network connection.</string>
    <string name="wizard_username_unavailable">This username is already in use.</string>
    <string name="assistant_phone_number_unavailable">This phone number is already in use.\r\nPlease type a different number.\r\nYou can delete your existing account if you want to reuse your phone number.</string>
    <string name="wizard_username_incorrect">Your username is invalid.</string>
    <string name="assistant_phone_number_incorrect">Your phone number is invalid.</string>
    <string name="wizard_email_incorrect">Your email is invalid.</string>
    <string name="wizard_password_incorrect">Your password is invalid</string>
    <string name="wizard_passwords_unmatched">Passwords do not match.</string>
    <string name="setup_confirm_username">Your username will be %s.\n\nIt may differ from your input to match requirements.\nDo you accept?</string>
    <string name="first_launch_no_login_password">Please enter your login and password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="assistant_choose_country">Choose a country</string>
    <string name="select_your_country">Select your Country</string>
    <string name="country_code">(%s)</string>
    <string name="use_username_instead_or_phone_number">Use a username (optional)</string>
    <string name="use_email_for_validation">Use email address for account validation</string>
    <string name="login_with_username">Use your username and password instead of your phone number</string>
    <string name="phone_number_info_title">What will my phone number be used for?</string>
    <string name="phone_number_info_content">\nThanks to your phone number, your friends will find you more easily.\n\n You will see in your address book who is using Dial and your friends will know that they can reach you on Dial as well.\n</string>
    <string name="phone_number_link_info_content">\nYour friends will find you more easily if you link your account to your phone number\n\nYou will see in your address book who is using Dial and your friends will know that they can reach you on Dial as well.\n</string>
    <string name="phone_number_link_info_content_already_account">You can only use your phone number with one Dial account.\n\nIf you had already linked your number to an other account but you prefer to use this one, simply link it now and your number will automatically be moved to this account.</string>
    <string name="status_not_connected">Not connected</string>
    <string name="content_description_menu">Menu</string>
    <string name="content_description_call_quality">Call quality</string>
    <string name="content_description_encryption">Encryption</string>
    <string name="profile_list_title">Login</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="start_button_text">Start</string>
    <string name="add_button_text" translatable="false">Add</string>
    <string name="connectionStatusTitle">Core Connection Status</string>
    <string name="no_status_yet">No Status yet</string>
    <string name="currentProfileTitle">Current Core Profile</string>
    <string name="no_profile_yet">No Active Profile</string>
    <string name="profileSelectionTitle">Available Core Profiles</string>
    <string name="disconnect">Disconnect</string>
    <string name="core_connection_import_profile">Add Core Profile</string>
    <string name="connect">Connect</string>
    <string name="voice_title_text">Glacier Dial</string>
</resources>