<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.OpenVPNFragment">

    <TextView
        android:id="@+id/connectionStatusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectionStatusTitle"
        style="@style/font6"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connectionStatusTitle"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="9dp"
        android:text="@string/no_status_yet"
        android:textColor="#DE000000" />

    <TextView
        android:id="@+id/currentProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentProfileTitle"
        style="@style/font6"
        android:layout_below="@+id/status"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <TextView
        android:id="@+id/currentProfile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentProfileTitle"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="9dp"
        android:text="@string/no_profile_yet"
        android:textColor="#DE000000" />

    <TextView
        android:id="@+id/profileSelectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileSelectionTitle"
        style="@style/font6"
        android:layout_below="@+id/currentProfile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <Spinner
        android:id="@+id/profileSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileSelectionTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/addNewProfile"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/getGlacierCore"
        android:text="@string/core_connection_import_profile"
        android:layout_below="@+id/profileSpinner"
        android:layout_marginTop="0dp" />

    <Button
        android:id="@+id/getGlacierCore"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/profileSpinner"
        android:text="Get Glacier Core" />

    <Button
        android:id="@+id/startVPN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/disconnect"
        android:layout_marginTop="0dp"
        android:text="@string/connect"
        android:visibility="visible" />

    <Button
        android:id="@+id/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addNewProfile"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@+id/startVPN"
        android:layout_toRightOf="@+id/startVPN"
        android:text="@string/disconnect" />

</RelativeLayout>
