<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="165dp"
    android:orientation="vertical">

    <TextView android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5sp" />

    <Spinner android:id="@+id/file_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:prompt="@string/profile_list_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:gravity="center_vertical|end"
        android:layout_gravity="end" >

        <View android:id="@+id/spacer"
            android:layout_width="10dp"
            android:layout_height="10dp" />

        <Button android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel_button_text" />

        <Button android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/add_button_text" />

        <View android:id="@+id/spacer2"
            android:layout_width="10dp"
            android:layout_height="10dp" />


    </LinearLayout>

</LinearLayout>
