<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.03"
        android:background="@color/white_color"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/font2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="20dp"
            android:onClick="onClick"
            android:clickable="true"
            android:text="@string/acknowledgement_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey_color" />

        <TextView
            android:id="@+id/acknowledgement_address"
            style="@style/font12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="20dp"
            android:onClick="onClick"
            android:clickable="true"
            android:text="@string/acknowledgement_address"/>

        <TextView
            style="@style/font2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:onClick="onClick"
            android:clickable="true"
            android:text="@string/acknowledgement_gnu" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey_color" />

        <LinearLayout
            style="android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="60dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/about_android_version"
                style="@style/font2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/about_version" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/about_link"
                style="@style/font2"
                android:textColorLink="@android:color/holo_blue_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autoLink="web"
                android:padding="10dp"
                android:text="@string/about_link" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>